# Finemote-Fines-Robot

./: .gitignore  .gitmodules  CMakeLists.txt
Algorithms/: DoubleBuffer.hpp  MahonyAHRS.h  Map.h  Matix.cpp  Matix.h
Algorithms/Communication/: Verify.cpp  Verify.h
Algorithms/Control/: Clamp.hpp  ControlBase.cpp  ControlBase.h  ControlBase.hpp  ImplementControlBase.hpp  PID.cpp  PID.h  PID.hpp
Algorithms/Matrix/: matrix.cpp  matrix.h
Algorithms/Verification/: CRC.cpp
Algorithms/Wheels/: HashMap.cpp  HashMap.h
BSP/MC_Board/: .mxproject  Board.h  CMakeLists.txt  MC_Board.cpp  MC_Board.h  MC_Board.ioc  Semihost.c
BSP/MC_Board/Core/Inc/: stm32f4xx_it.h  usart.h
BSP/MC_Board/Core/Src/: can.c  dma.c  main.c  stm32f4xx_it.c  tim.c  usart.c
BSP/MC_Board/FineMote_BSP/: BSP_CAN.cpp  BSP_CAN.h  BSP_PWM.h  BSP_RS485.cpp  BSP_RS485.h  BSP_UART.h
BSP/MC_Board/MDK-ARM/: MC_Board.uvoptx  MC_Board.uvprojx
BSP/Robomaster_C/: Board.h  CMakeLists.txt  Robomaster.cpp  Robomaster_C.h  Robomaster_C.ioc
BSP/Robomaster_C/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
BSP/Robomaster_C/Core/Src/: dma.c  gpio.c  main.c
BSP/Robomaster_C/FineMote_BSP/: BSP_PWM.h  BSP_UART.cpp
BSP/Robomaster_C/MDK-ARM/: Robomaster_C.uvoptx  Robomaster_C.uvprojx
BSP2/MC_Board/Core/Inc/: stm32f4xx_it.h
BSP2/MC_Board/Core/Src/: main.c  tim.c
BSP2/Robomaster_C/Core/Inc/: main.h  tim.h
Bsp/MC_Board/: .mxproject  CMakeLists.txt  MC_Board.cpp  MC_Board.h  MC_Board.ioc  STM32F446RCTX_FLASH.ld  STM32F446RCTX_RAM.ld
Bsp/MC_Board/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Bsp/MC_Board/Core/Src/: can.c  dma.c  gpio.c  iwdg.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Bsp/MC_Board/MDK-ARM/: MC_Board.uvoptx  MC_Board.uvprojx  startup_stm32f446xx.s
Bsp/Robomaster_C/: .mxproject  CMakeLists.txt  Robomaster.cpp  Robomaster_C.h  Robomaster_C.ioc
Bsp/Robomaster_C/Core/Inc/: stm32f4xx_it.h  tim.h
Bsp/Robomaster_C/Core/Src/: can.c  dma.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
Bsp/Robomaster_C/MDK-ARM/: Robomaster_C.uvoptx  Robomaster_C.uvprojx  startup_stm32f407xx.s
Components/: Chassis.cpp  Chassis.h  Manipulator.cpp  Manipulator.h  Motor4010.cpp  Motor4010.h  Motor4315.h  README.txt
Components/Chassis/: ChassisBase.hpp  POV_Chassis.hpp
Components/Examples/: I2CTest.h  MotorTest.h  UART_Test.h
Devices/: DeviceBase.cpp  DeviceBase.h  I2C_test.cpp  I2C_test.h
Devices/Controllers/: DBUS.cpp  DBUS.h  DJI_DT7.cpp  DJI_DT7.h  PWM.h  RadioMaster_Zorro.cpp  RadioMaster_Zorro.h  RemoteControl.cpp  RemoteControl.h  SBUS.cpp  SBUS.h
Devices/Encoders/: D28_485.cpp  D28_485.h
Devices/Motors/: Emm28.cpp  Emm28.h  Emm28.hpp  HO3507.cpp  HO3507.h  HO3507.hpp  Motor4010.cpp  Motor4010.h  Motor4010.hpp  Motor4315.cpp  Motor4315.h  Motor4315.hpp  MotorBase.cpp  MotorBase.h  MotorBase.hpp  MotorTest.cpp  MotorTest.h  Odrive.cpp  Odrive.h  Odrive.hpp  RMD_L_40xx_v3.cpp  RMD_L_40xx_v3.h  RMD_L_40xx_v3.hpp  Servo.h  Servo.hpp
Devices/RemoteControllers/: DJI_DT7.cpp  DJI_DT7.h  RadioMaster_Pocket.cpp  RadioMaster_Pocket.h  RadioMaster_Zorro.cpp  RadioMaster_Zorro.h  RemoteControl.cpp  RemoteControl.h
Devices/Sensors/: BMI088.cpp  BMI088.h  BMI088reg.h  IMUBase.cpp  IMUBase.h
Docs/: README.md  如何在本框架内实现板级片级逻辑与设备逻辑的分离.md
Interface/: InstanceManager.cpp  InstanceManager.h  Interface.cpp  Interface.h  PeripheralDefination.h  ProjectConfig.h  Scheduler.cpp  Scheduler.h
Interface/Examples/: TaskBeepMusic.cpp  TaskLED.cpp  TaskPOVChassis.cpp
Interface/UserTasks/: UserTask1.cpp
Services/Bus/: CAN_Base.cpp  CAN_Base.h  CAN_Base.hpp  I2C_Base.cpp  I2C_Base.h  PWM.h  PWM_Base.hpp  RS485_Base.cpp  RS485_Base.h  RS485_Base.hpp  UARTBaseLite.cpp  UARTBaseLite.h  UART_Base.cpp  UART_Base.h  UART_Base.hpp  bsp_spi.cpp  bsp_spi.h
Services/FineWarden/: FZMotion.cpp  FZMotion.h  FineSerial.hpp
Services/MultiMedia/: BeepMusic.cpp  BeepMusic.h  BeepMusic.hpp  BeepMusicBasic.h  LED.h  MusicLibrary.hpp  Music_Astronomia.h  Music_IronTorrent.h  Music_LiuSha.h  Music_Senbonzakura.h  Music_SuperMario.h  Music_Windmill.h  Music_YMCA.h
Tests/: I2CTest.cpp  UART_Test.cpp  UART_Test.h
Tests/Peripheral/: Test_IO.cpp  Test_IO.h  Test_Timer.cpp  Test_Timer.h
Tests/ToolChain/: Test_Assert.cpp  Test_Assert.h
